# TraderMock

./: .gitignore  Cargo.toml  README.md
src/: app.rs  fileserv.rs  lib.rs  main.rs  utils.rs
src/abi/: Pool.json
src/be_services/: anvil_service.rs  mod.rs  uniswap_deployment_service.rs
src/pages/: mod.rs
src/pages/documentation/: deployments.rs  doc_root.rs  mod.rs  overview.rs  trade_history.rs
