[package]
name = "flash-bot-epi-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"
eyre = "0.6.12"
tokio = { version = "1.0.1", features = ["full"] }
ethers-flashbots = "0.15.0"
reqwest = { version = "0.12.1", features = ["json", "blocking"] }
dotenv = "0.15.0"